--- a/games-roguelike/lambdarogue/files/lambdarogue-1.5.cfg
+++ b/games-roguelike/lambdarogue/files/lambdarogue-1.5.cfg
@@ -11,7 +11,7 @@ SmallTiles
 = True
  
 Fullscreen
-= True
+= False
  
 1024x768
 = False
@@ -41,7 +41,7 @@ PlaySoundFX
 = @@SOUND@@
  
 MediaPlayer:
-mpg123 -q
+/usr/bin/mpg123 -q
  
  
 # Interface Options
